fix: z-index modals

--- a/src/Components/UI/WindowedSection/WindowedSection.module.scss
+++ b/src/Components/UI/WindowedSection/WindowedSection.module.scss
@@ -145,6 +145,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
+  z-index: 40;
   user-select: none;
   animation-name: greyedShow;
   animation-duration: 200ms;
